<resources>
    <string name="app_name">VideoPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- for exoplayer layout -->
    <string name="loading">Loading..</string>
    <string name="duration">00:00</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Icon</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="video_name">Video Name</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="fullscreen_btn">FullScreen Button</string>
    <string name="play_btn">Play Button</string>
    <string name="search">search</string>
    <string name="O">0</string>
</resources>