<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UI.PlayerActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.vkay94.dtpv.DoubleTapPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:keepScreenOn="true"
            app:controller_layout_id="@layout/custome_control_view"
            app:dtpv_controller="@id/ytOverlay"
            app:show_buffering="always" />

        <com.github.vkay94.dtpv.youtube.YouTubeOverlay
            android:id="@+id/ytOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#77000000"
            android:visibility="gone"
            app:yt_playerView="@id/playerView" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/menu"
            app:tint="@color/white" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/lockBtn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/lock_open_icon"
        app:layout_constraintEnd_toEndOf="@+id/topController"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play_btn"
        android:focusable="true"
        android:src="@drawable/play_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />


    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/fullScreenbtn"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            android:src="@drawable/fullscreen_icon"
            app:tint="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>